# linuxcnc_scurve_compact

./: install.sh  install_local.sh
cmake/: .gitignore  ETHERCAT.md  LICENCE.md  PATCH.md  README.md  README.md.autosave  TODO.md  build_cmake  build_cmake_rm  build_lcnc  deps_lcnc  installer  patch
cmake/build-libhome-extern-Imported_Kit_c57c02-Debug/: CMakeCache.txt  README.md  build.ninja  cmake_install.cmake  qtcsettings.cmake
cmake/configs/: run_axis_3_orig  run_axis_9  run_axis_9_2_spindles  run_axis_9_3_spindles  run_axis_9_loop  run_axis_9_orig  run_axis_delta
cmake/configs/axis_3_orig/: axis_mm.ini  position_mm.txt
cmake/configs/axis_9/: axis_scurve_9_mm.ini  axis_scurve_9_mm_cmds.hal  halshow.preferences  position9.txt
cmake/configs/axis_9_3_spindles/: axis_9_3_spindles_cmds.hal
cmake/configs/axis_9_loop/: loop_9.ini
cmake/configs/axis_9_orig/: axis_9axis_mm_cmds.hal  axis_scurve_9_mm_cmds.hal
cmake/configs/axis_delta/: axis_delta.hal  axis_delta.ini  axis_delta.var.bak  core_sim.hal  ethercat-conf-delta.xml  halshow.preferences  position_mm.txt
cmake/configs/old_configs/axis_stepper_ecat/: ethercat_test.hal  halshow.preferences  position_mm.txt
cmake/configs/old_configs/grotius_stepper_ecad/: ethercat.hal
cmake/configs/old_stepper_config/axis_stepper_ecat/: axis_mm.ini  (+1 more)
cmake/configs/simulation/: run_axis_3  run_axis_3_orig  run_axis_9  run_axis_9_2_spindles  run_axis_9_3_spindles  run_axis_9_loop  run_axis_9_orig
cmake/libbacklash/: CMakeLists.txt  backlash.c  backlash.h  runtest  scurve.c  scurve.h
cmake/libcia402/: CMakeLists.txt  README.md  cia402.c  cia402_base.c  cia402_test.c  drive_command.h  drive_status.h  ethercat-conf.xml  halpins.h  halsection.h  runtest
cmake/libclothoid3d/: CMakeLists.txt  DISCLAIMER.md
cmake/libclothoid3d/src/: eq14.h  eq15.h  eq18.h  eq19.h  eq30.h  eq32.h  eq33.h  eq40.h  eq41.h  segment.h
cmake/libclothoid3d/test/: CMakeLists.txt
cmake/libclothoid3d_/: README.md
cmake/libclothoid3d_/src/: CMakeLists.txt  algorithm1.h  algorithm2.h  eq17.h  eq20.h  eq21.h  eq22.h  eq23.h  eq29.h  eq31.h  eq35.h  eq39.h  eq42.h  eq43.h  eq44_G0.h  eq44_G123.h  eq45.h  gauss_legendre.h
cmake/libclothoid3d_/src/experimental/: ceres_motion_cppapi.h  ceres_motion_intf.h  residual_clothoid_motion_fit.h  velocity.h
cmake/libclothoid3d_/src/gcode/: fit.h
cmake/libclothoid3d_/src/math/: vector_math.h
cmake/libclothoid3d_/src/plot/: plot_c.h  plot_cpp.h
cmake/libclothoid3d_/src/solver/: ceres_intf.cpp  ceres_intf.h  residual_clothoid_fit.h  residual_fillet_fit.h  residual_function_jacobian.h
cmake/libclothoid3d_/src/trash/: ceres_intf.cpp  clothoid_2_no_fit.h  dogleg_fit.h  nelder_mead.h  nelder_mead_test.h  powel_example.h  single_clothoid_fit_gsl.h  test_dogleg_3d.h
cmake/libclothoid3d_/test/: main.c
cmake/libethercat/: CMakeLists.txt  README.md  build_cmake  ecat.c  ecat.cpp  hal_data_types.h  runtest
cmake/libethercat/ethercat_master/: INSTALL.md  configure.ac  install.sh  postinst_old_for_info
cmake/libethercat/ethercat_master/master/: ioctl.h
cmake/libethercat/ethercat_master/script/: set_ethercat_config.sh  start_ethercat.sh
cmake/libethercat/ethercat_master/tool/: CMakeLists.txt  Command.cpp  Command.h  CommandSdos.cpp  CommandSdos.h  CommandXml.cpp  CommandXml.h  DataTypeHandler.h  common.h
cmake/libhome/: CMakeLists.txt
cmake/libhome-extern/: .gitignore  CMakeLists.txt  README.md
cmake/libhomecia402/: CMakeLists.txt  homecia402.c  homemod_cia402.c  homing_cia402.c  homing_cia402.h  homingcia402.c
cmake/liblinuxcnc-ethercat/: CMakeLists.txt  README.md  ethercat-conf-DELTA-ASDA-B3.xml  lcec_conf.c  lcec_conf.h  lcec_delta_asda_b3.c  lcec_delta_asda_b3.h  lcec_main.c  runtest
cmake/liblinuxcnc-ethercat_/: CMakeLists.txt  ethercat-conf.xml  install.sh
cmake/liblinuxcnchal/: CMakeLists.txt
cmake/libmotion/: CMakeLists.txt
cmake/libplanner/: CMakeLists.txt  README.md  arc.c  arc.h  common.h  curve.c  curve.h  emcmot_segment.h  feed.c  feed.h  follower.h  halsection.h  interpolate.c  interpolate.h  keyboard.h  look_ahead.h  module.h  sub_segment.h  tp_scurve.c  tp_scurve.h  vector.h
cmake/libplanner/optimizers/: path_clothoid.h  path_clothoid_abc_uvw.h  path_standard.h  path_standard_subseg.h  path_standard_subseg_line_fillet.h
cmake/libplanner/trash/: deviation_point.h  filletizer.cpp  filletizer.h  filletizer_wrapper.h  motionizer.cpp  motionizer.h  motionizer_wrapper.h  ringbuffer.h  stepgen.c  stepgen.h  trapezium.c  trapezium.h  vector.cpp  vector_wrapper.h
cmake/libscurve/: README.md
cmake/libscurve/src/: CMakeLists.txt  scurve.c  scurve.h
cmake/libscurve_/: CMakeLists.txt
cmake/libscurve_/test/: CMakeLists.txt  main.c
cmake/libspline/: parson.c  tinyspline.c  tinysplinecxx.cxx
cmake/libtemplate/: CMakeLists.txt  runtest  template.c
cmake/libtemplate_/: runtest  template.c
cmake/nc_files/arc_helix/: G2.ngc  G2_helix.ngc  G3.ngc  G3_helix.ngc
cmake/nc_files/fillet/: arc_100x100.ngc  square_100x100_P5.ngc  square_100x100_P5_abc_uvw_peak.ngc  square_3d.ngc
cmake/nc_files/nc_files_cookbook/: Griffin Relief.ngc  SupportLogo.ngc  boomerangv4.ngc
cmake/nc_files/nc_files_evgen/: i3DRough_target2.ngc
cmake/nc_files/nc_files_grotius/: axis.ngc  axis_P2.ngc
cmake/nc_files/nc_files_julian/: loop_9
cmake/nc_files/nc_files_lcnc/: 3dHelixTest.ngc
cmake/nc_files/nc_files_lcvette/: lcevette_shake_test.ngc  lift_test.ngc  testfile_lcvette.ngc
cmake/nc_files/nc_files_mikanet/: colinair_test.ngc  x_coordinate_test.ngc
cmake/nc_files/nc_files_robh/: testfile_robh.ngc
cmake/nc_files/nc_files_tap/: tap_example.ngc  tap_info.txt  tap_multihole_test.ngc  tapping_code_test.ngc
cmake/patch_files/: tp.c  tp.h
configs/sim/axis/: axis_scurve_mm.ini
configs/sim/axis_deltaB3_cia402_csp_ecat/: README  cia402_csp_axis.hal  cia402_csp_axis.ini  ethercat-conf.xml
configs/sim/axis_deltaB3_cia402_csp_ecat_test/: cia402_csp_axis.hal  cia402_csp_axis.ini  core_sim.hal  ethercat-conf.xml
configs/sim/grotius_stepper_ecad/: axis_mm.ini
src/emc/motion/: homing.c  motion.c
(+67 files in other folders)
